data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3104.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\91\80\80\80\00\01\03\65\6e\76\09\73"
    "\6f\6d\65\5f\66\75\6e\63\00\00\03\82\80\80\80\00"
    "\01\00\0a\8e\80\80\80\00\01\88\80\80\80\00\00\10"
    "\00\41\2a\0f\0f\0b"
  )
""
)